plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'hackathon.bigone'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	developmentOnly
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' } //Komoran
}

sourceSets {
	main {
		resources {
			srcDirs = ['src/main/resources']
			includes = ["**"]
		}
	}
}

tasks.named('processResources') {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from('src/main/resources') {
		include '**/*.txt'
		include '**/*.csv'
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'

	//runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// (dev 전용) H2 — 운영엔 절대 포함 X
	developmentOnly 'com.h2database:h2'

	//security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// JWT - 토큰 인증
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Redis - 로그아웃 및 ocr에 필요
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// RedisTemplate에서 문자열 직렬화에 필요
	implementation 'org.apache.commons:commons-pool2'

	// MySQL 연결용 드라이버
	runtimeOnly 'com.mysql:mysql-connector-j'

	implementation 'com.github.shin285:KOMORAN:3.3.9' //Komoran4

	implementation 'org.json:json:20240303' //JSONObject 사용

	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.767' //s3...

}

tasks.named('test') {
	useJUnitPlatform()
	exclude '**/SunsakApplicationTests.class'
}

tasks.named('jar') { enabled = false }   // plain jar 비활성화
bootJar {
	archiveFileName = 'app.jar'         // 빌드 산출물명을 고정
}